WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37386
[Haiku] Fix crash in Gradient::fill()
https://bugs.webkit.org/show_bug.cgi?id=37386
Summary
[Haiku] Fix crash in Gradient::fill()
Stephan Aßmus
Reported
2010-04-10 05:22:50 PDT
In certain situations, the platform BGradient could have not been created before Gradient::fill() is called the first time. Enforce its creation by using platformGradient() instead of dereferencing the member directly.
Attachments
[Haiku] Fix crash in Gradient::fill()
(1.26 KB, patch)
2010-04-10 05:24 PDT
,
Stephan Aßmus
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephan Aßmus
Comment 1
2010-04-10 05:24:33 PDT
Created
attachment 53038
[details]
[Haiku] Fix crash in Gradient::fill()
Eric Seidel (no email)
Comment 2
2010-04-10 14:17:05 PDT
Comment on
attachment 53038
[details]
[Haiku] Fix crash in Gradient::fill() Thanks.
WebKit Commit Bot
Comment 3
2010-04-10 14:39:54 PDT
Comment on
attachment 53038
[details]
[Haiku] Fix crash in Gradient::fill() Clearing flags on attachment: 53038 Committed
r57420
: <
http://trac.webkit.org/changeset/57420
>
WebKit Commit Bot
Comment 4
2010-04-10 14:39:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug