2010-04-10  Stephan Aßmus  <superstippi@gmx.de>

Reviewed by Eric Seidel.

        [Haiku] Fix crash in Gradient::fill()
        https://bugs.webkit.org/show_bug.cgi?id=37386

        Covered by existing tests.

        * platform/graphics/haiku/GradientHaiku.cpp:
        (WebCore::Gradient::fill):
            - Make sure the platform gradient is already cached before
              dereferencing its pointer.

Canonical link: https://commits.webkit.org/48709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57420 268f45cc-cd09-0410-ab3c-d52691b4dbfc